# fitness

./: diet.py  main.py  program.py  prompts.py  pyproject.toml  schema.py  storage.py
templates/: index.html
