[project]
name = "langchain-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.3",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
